# super-kenlm-wrapper

./: LICENSE  README.md  pom.xml  test.arpa
src/main/java/kenlm/: CleanerUtil.java  Config.java  FullScoreReturn.java  KenlmJNI.java  LoadMethod.java  Model.java  NativeLibLoader.java  State.java
src/main/native/: CMakeLists.txt  kenlm_KenlmJNI.cpp  kenlm_KenlmJNI.h
src/test/java/kenlm/: ModelTest.java
